# char-count-golf

./: .gitignore  Cargo.toml  README.md  build.rs
html/: index.html  index.js  package.json
src/: lib.rs  main.rs
