[package]
name = "char-count-golf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superslice = "1.0.0"
hashbrown = "0.11.2"

[build-dependencies]
superslice = "1.0.0"
unicode-normalization = "0.1.19"
