[package]
name = "char-count-golf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
superslice = "1.0.0"
hashbrown = "0.11.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = "2.34.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.78"

[build-dependencies]
superslice = "1.0.0"
unicode-normalization = "0.1.19"
